# botler

./: .gitignore  CLAUDE.md  LICENSE  README.md  package.json  pyproject.toml
docs/: design.md
src/: index.tsx
src/agents/: index.ts
src/botler/: __init__.py
src/botler/cli/: __init__.py  display.py  main.py
src/botler/core/: __init__.py  engine.py  schemas.py  tools.py  workspace.py
src/botler/plugins/: __init__.py
src/botler/plugins/capabilities/: __init__.py
src/botler/plugins/interfaces/: __init__.py
src/core/: client.ts  engine.ts  mentions.ts  paths.ts  storage.ts  types.ts
src/tools/: index.ts
src/tui/: App.tsx
src/tui/components/: Input.tsx  Message.tsx  ToolCall.tsx
src/tui/hooks/: useChat.ts
tests/: __init__.py  test_schemas.py  test_tools.py  test_workspace.py
